apps/infra/kube-prometheus/k8s-manifests-grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: grafana
  namespace: infra
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.rmikl.pl
    http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - grafana.rmikl.pl
    secretName: rmikl.pl
